tests/ui/const-generics/mgca/bad-type_const-syntax.stderr
error[E0658]: `type const` syntax is experimental
  --> $DIR/bad-type_const-syntax.rs:2:5
   |
LL |     type const N: usize;
   |     ^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = help: add `#![feature(min_generic_const_args)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `type const` syntax is experimental
  --> $DIR/bad-type_const-syntax.rs:11:5
   |
LL |     type const N: usize = 0;
   |     ^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = help: add `#![feature(min_generic_const_args)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: associated `type const` are unstable
  --> $DIR/bad-type_const-syntax.rs:2:5
   |
LL |     type const N: usize;
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = help: add `#![feature(min_generic_const_args)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: associated `type const` are unstable
  --> $DIR/bad-type_const-syntax.rs:11:5
   |
LL |     type const N: usize = 0;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = help: add `#![feature(min_generic_const_args)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
